Fix alignment of titles

--- a/src/client/dev/components/organisms/AccountStats.styl
+++ b/src/client/dev/components/organisms/AccountStats.styl
@@ -1,6 +1,6 @@
 #stats-container {
 	grid-column-start: span 3;
-	grid-row-start: span 2;
+	grid-row: 1 / span 1;
 	background-color: medium-green;
 	padding: 10px;
 	position: relative;
@@ -27,6 +27,3 @@
 		}
 	}
 }
-
-/* Out here to reduce the specificity so that the 
-:hover psuedoclass still works*/
