--- a/src/client/dev/components/organisms/Heatmaps.styl
+++ b/src/client/dev/components/organisms/Heatmaps.styl
@@ -1,8 +1,11 @@
 .heatmaps-container {
+	grid-column: 1 / span 2;
+	grid-row: 2 / span 2;
 	height: 100%;
 	overflow: scroll;
 	display: flex;
 	flex-direction: row;
+	
 	
 	@media screen and (max-width: break-large) {
 		flex-direction: column
