--- a/src/client/dev/components/pages/Dash.styl
+++ b/src/client/dev/components/pages/Dash.styl
@@ -1,13 +1,5 @@
 #dash {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: 60px 250px 1fr;
-	
-	&.smallStats {
-		grid-template-rows: 60px 50px 1fr;
-	}
-	
-	&.noStudies {
-		grid-template-columns: repeat(2, 1fr);
-	}
+	grid-template-rows: 250px 1fr;
 }
